[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Ui/Select/SelectBar.png" type="Texture" id=1]
[ext_resource path="res://Src/Ui/Select/CheckOption.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ui/Select/CheckBox.png" type="Texture" id=3]

[node name="CheckOption" type="Control"]
margin_right = 144.0
margin_bottom = 24.0
rect_min_size = Vector2( 144, 24 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
centered = false
hframes = 3

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_right = 140.0
margin_bottom = 24.0
text = "Text"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseDetector" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxSprite" type="Sprite" parent="."]
position = Vector2( 3, 3 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
centered = false
hframes = 4

[node name="CheckBox" type="Control" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 18.0
margin_bottom = 18.0
[connection signal="gui_input" from="MouseDetector" to="." method="_on_MouseDetector_gui_input"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_MouseDetector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_MouseDetector_mouse_exited"]
[connection signal="gui_input" from="CheckBox" to="." method="_on_CheckBox_gui_input"]
[connection signal="mouse_entered" from="CheckBox" to="." method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="CheckBox" to="." method="_on_CheckBox_mouse_exited"]
